--- a/text2_anal.ipynb
+++ b/text2_anal.ipynb
@@ -692,7 +692,7 @@
     "\n",
     "Значение AUC 0.76 для критерия Хи-квадрат Пирсона указывает на удовлетворительное, но не идеальное качество классификации. Классификатор с таким AUC имеет среднюю способность различать коллокации и не коллокации.\n",
     "\n",
-    "Значение AUC 0.82 указывает на хорошее качество классификации. Классификатор, использующий критерий отношения правдоподобия, работает эффективно и демонстрирует хорошую способность различать коллокации и не коллокации, что делает его более предпочтительным по сравнению с критерием хи-квадрат.",
+    "Значение AUC 0.82 указывает на хорошее качество классификации. Классификатор, использующий критерий отношения правдоподобия, работает эффективно и демонстрирует хорошую способность различать коллокации и не коллокации, что делает его более предпочтительным по сравнению с критерием хи-квадрат.\n",
     "\n",
     "Однако, на это все значительно повлиял тип анализируемого текста. Данная книга является примером написания программ на языке R для статистического анализа. Многие из наших словосочетаний со словом матрица являются функциями этого языка. Т.е. в этом языке в действительности есть функция с названием matrix. Такие биграммы как matrix rnorm, matrix dim, matrix byrow и некоторые другие являются просто последовательно написанными командами данного языка, которые довольно часто встречаются в тексте как примеры.\n"
    ]
